apps/freshrss/network.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: freshrss
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: freshrss
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss
  namespace: freshrss
spec:
  ingressClassName: internal
  tls:
  - hosts:
    - freshrss.pawked.com
  rules:
  - host: freshrss.pawked.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: freshrss
            port:
              number: 80
